--- a/gmaps-scraper/package.json
+++ b/gmaps-scraper/package.json
@@ -18,11 +18,12 @@
     "stripe": "^17.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
